--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,17 @@
 lastupdate.tmp
+.vscode/
 planes_mid
+main
+.scannerwork/
+swagger/*.png
+swagger/*.html
+swagger/*.js
+swagger/*.map
+swagger/*.css
+swagger/*.yml
+swagger/css/
+swagger/fonts/
+swagger/images/
+swagger/lang/
+swagger/lib/
+sga_mid.exe
