--- a/conf/app.conf
+++ b/conf/app.conf
@@ -5,5 +5,4 @@ autorender = false
 copyrequestbody = true
 EnableDocs = true
 
-PlanesService = ${PLANES_SERVICE}
-
+PlanesService =http://pruebasapi2.intranetoas.udistrital.edu.co:8523
