--- a/conf/app.conf
+++ b/conf/app.conf
@@ -5,4 +5,4 @@ autorender = false
 copyrequestbody = true
 EnableDocs = true
 
-PlanesService =http://pruebasapi2.intranetoas.udistrital.edu.co:8523
+PlanesService = ${PLANES_SERVICE}
