feat: Funcion get_unidades

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -8,3 +8,4 @@ EnableDocs = true
 
 PlanesService = ${PLANES_SERVICE}
 PlanCuentasService = ${PLAN_CUENTAS_SERVICE}
+OikosService = ${OIKOS_SERVICE}
