feat: Controlador para las funciones de seguimiento

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -9,3 +9,4 @@ EnableDocs = true
 PlanesService = ${PLANES_SERVICE}
 PlanCuentasService = ${PLAN_CUENTAS_SERVICE}
 OikosService = ${OIKOS_SERVICE}
+ParametrosService = ${PARAMETROS_SERVICE}
