--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,12 +1,12 @@
 appname = planes_mid
-httpport = ${PLANES_MID_HTTP_PORT}
+httpport = 8080
 runmode = dev
 
 autorender = false
 copyrequestbody = true
 EnableDocs = true
 
-PlanesService = ${PLANES_SERVICE}
-PlanCuentasService = ${PLAN_CUENTAS_SERVICE}
-OikosService = ${OIKOS_SERVICE}
-ParametrosService = ${PARAMETROS_SERVICE}
+PlanesService = http://pruebasapi2.intranetoas.udistrital.edu.co:8523
+PlanCuentasService = pruebasapi.intranetoas.udistrital.edu.co:8203/v1
+OikosService = api.intranetoas.udistrital.edu.co:8087/v1
+ParametrosService = pruebasapi.intranetoas.udistrital.edu.co:8510/v1
