feat: ajuste en rubros del plan anual general y generacion del b64

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -10,3 +10,4 @@ PlanesService = ${PLANES_SERVICE}
 PlanCuentasService = ${PLAN_CUENTAS_SERVICE}
 OikosService = ${OIKOS_SERVICE}
 ParametrosService = ${PARAMETROS_SERVICE}
+Static = ${PLANES_MID_STATIC_PATH}
