feat: Funcion de vinculacion por usuario y funciones para activar o desactivar rama

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -10,3 +10,4 @@ PlanesService = ${PLANES_SERVICE}
 PlanCuentasService = ${PLAN_CUENTAS_SERVICE}
 OikosService = ${OIKOS_SERVICE}
 ParametrosService = ${PARAMETROS_SERVICE}
+TercerosService = ${TERCEROS_SERVICE}
