feat: Desarrollo de controlador para caluclos en identificacion de contratistas

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -12,4 +12,5 @@ OikosService = ${OIKOS_SERVICE}
 ParametrosService = ${PARAMETROS_SERVICE}
 TercerosService = ${TERCEROS_SERVICE}
 GestorDocumental = ${GESTOR_DOCUMENTAL_SERVICE}
+ResolucionesDocentes = ${RESOLUCIONES_DOCENTES_SERVICE}
 
