--- a/.drone.yml
+++ b/.drone.yml
@@ -72,6 +72,7 @@ steps:
   - go install github.com/AlekSi/gocov-xml@latest
   - go install github.com/jstemmer/go-junit-report@latest
   - golangci-lint run --out-format=checkstyle --timeout=5m > report.xml || true
+  - cat report.xml
   # - gocov test ./... | gocov-xml > coverage.xml
   # - go test -v ./... | go-junit-report > test.xml
   when:
